[tool.poetry]
name = "dramatiq-header"
version = "0.1.0"
description = ""
authors = ["Felipe Guedes <contatofelipeguedes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dramatiq = "^1.15.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "single"

indent-style = "space"
